[gd_scene load_steps=21 format=2]

[ext_resource path="res://map/slide_puzzle/tile_sheet.png" type="Texture" id=1]
[ext_resource path="res://Puzzle.gd" type="Script" id=2]
[ext_resource path="res://map/slide_puzzle/puzzle_frame.png" type="Texture" id=3]
[ext_resource path="res://map/slide_puzzle/puzzle_frame_complete.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "complete",
"speed": 5.5
} ]

[node name="SlidePuzzle" type="Node2D"]
z_index = -3
script = ExtResource( 2 )

[node name="Tile1" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 3

[node name="Tile2" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 1

[node name="Tile3" type="Sprite" parent="."]
position = Vector2( 64, 0 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 2

[node name="Tile4" type="Sprite" parent="."]
position = Vector2( 0, 32 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 3

[node name="Tile5" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 4

[node name="Tile6" type="Sprite" parent="."]
position = Vector2( 64, 32 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 5

[node name="Tile7" type="Sprite" parent="."]
position = Vector2( 0, 64 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 6

[node name="Tile8" type="Sprite" parent="."]
position = Vector2( 32, 64 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 7

[node name="Tile9" type="Sprite" parent="."]
position = Vector2( 64, 64 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 8

[node name="Pos1" type="Position2D" parent="."]

[node name="Pos2" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="Pos3" type="Position2D" parent="."]
position = Vector2( 64, 0 )

[node name="Pos4" type="Position2D" parent="."]
position = Vector2( 0, 32 )

[node name="Pos5" type="Position2D" parent="."]
position = Vector2( 32, 32 )

[node name="Pos6" type="Position2D" parent="."]
position = Vector2( 64, 32 )

[node name="Pos7" type="Position2D" parent="."]
position = Vector2( 0, 64 )

[node name="Pos8" type="Position2D" parent="."]
position = Vector2( 32, 64 )

[node name="Pos9" type="Position2D" parent="."]
position = Vector2( 64, 64 )

[node name="Border" type="AnimatedSprite" parent="."]
position = Vector2( 32, 32 )
frames = SubResource( 8 )
animation = "complete"
frame = 7
